# dockerized-postgres-etl

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  settings.py
app/: api_client.py  main.py  settings.py  wallets_insights.py
