[project]
name = "dockerized-postgres-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "ramon-almeida",email = "ramon.almbtc@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "polars (>=1.32.3,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
